--- a/cyclope/core/collections/templates/collections/category_root_items_list.html
+++ b/cyclope/core/collections/templates/collections/category_root_items_list.html
@@ -5,7 +5,7 @@
 {% comment %}
 TODO(nicoechaniz): adapt this view to work in the same way as category_teaser_list, by providing a [content_type]_listing_view.html (or whatever better name) for every base content type, like we do with [content_type]_teaser.html
 {% endcomment %}
-<div class="root">
+<div class="category_root_item_list">
 <ul>
 {% for categorization in categorizations %}
   <li>
