--- a/cyclope/core/collections/templates/collections/collection_categories_hierarchy.html
+++ b/cyclope/core/collections/templates/collections/collection_categories_hierarchy.html
@@ -34,7 +34,7 @@
         }
     });
 </script>
-<div class="root">
+<div class="collection_categories_hierarchy">
 <ul>
   {{ categories|unordered_list }}
 </ul>
