--- a/cyclope/core/collections/templates/collections/collection_root_categories_list.html
+++ b/cyclope/core/collections/templates/collections/collection_root_categories_list.html
@@ -1,7 +1,7 @@
 {% extends host_template %}
 
 {% block content %}
-<div class="root">
+<div class="categories_hierarchy">
 {% if collection.visible %}<div class="title">{{ collection.name }}</div>{% endif %}
   <ul>
   {% for category in categories %}
