--- a/cyclope/apps/articles/templates/articles/article_teaser.html
+++ b/cyclope/apps/articles/templates/articles/article_teaser.html
@@ -4,10 +4,11 @@
 
     <div class="pretitle-container first meta-content">
       {% if  article.pretitle and not simplified_view %}
-      <h6 class="pretitle">{% trans article.pretitle %}{% if article.date %}<span class="pretitle-separator"> | </span>{% endif %}</h6>
+      <div class="pretitle">{% trans article.pretitle %}{% if article.date %}<span class="pretitle-separator"> | </span>{% endif %}</div>
       {% endif%}
+      
       {% if article.date %}
-      <h6 class="date">{{ article.date|date:'SHORT_DATE_FORMAT' }}</h6>
+      <div class="date">{{ article.date|date:'SHORT_DATE_FORMAT' }}</div>
       {% endif %}
     </div>
 
@@ -19,14 +20,14 @@
       </a></div>
     {% endif %}
 
-    <h3 class="html-content summary">
+    <div class="html-content summary">
       {% if article.summary %}
         {{ article|parsed_gettext:"summary"|smart_style }}
       {% else %}
         {{ article|parsed_gettext:"text"|smart_style|truncatewords_html:40 }}
       {% endif %}
       <span class="more"><a href="{% url article-detail article.slug %}"> {% trans "More" %}</a></span> 
-    </h3>
+    </div>
 
     {% if not simplified_view %}
         {% if article.author %}
