--- a/cyclope/apps/newsletter/templates/newsletter/content.html
+++ b/cyclope/apps/newsletter/templates/newsletter/content.html
@@ -6,7 +6,7 @@
 
   {% for categorization in categorizations %}
     {% alias categorization.content_object as 'article' %}
-
+<div class="newsletter newsletter_detail">
 <table>
   <tr>
     <td>
@@ -18,26 +18,26 @@
       <a name="article__{{ article.slug }}">
         <h3 class="title">{% trans article.name  %}</h3>
       </a>
-      <h4>{{ article|parsed_gettext:"summary"|smart_style }}</h4>
+      <div class="summary">{{ article|parsed_gettext:"summary"|smart_style }}</div>
       {% if article.author %}
       <h5>{% trans "By"%} {{ article.author }}</h5>
       {% endif %}
 
 
-      <p class="article_content">
+      <div class="text">
         {% if article.pictures %}
-        <img src="{% version article.pictures.0.image.path 'small' %}" alt="{{ article.pictures.0.name }}" hspace="0" vspace="0" align="right" />
+        <img class="newsletter_image" src="{% version article.pictures.0.image.path 'small' %}" alt="{{ article.pictures.0.name }}" hspace="0" vspace="0" align="right" />
         {% endif %}
 
         <span class="html-text html-content">
           {{ article|parsed_gettext:"text"|smart_style}}
         </span>
-      </p>
-      <span class="permalink"><a href="{% url article-detail article.slug %}">{% trans "Visit website" %}</a></span>
+      </div>
+      <div class="permalink">{% trans "URL" %}: <a href="{% url article-detail article.slug %}">http://{{ CYCLOPE_SITE_SETTINGS.site.domain }}{% url article-detail article.slug %}</a></div>
     </td>
   </tr>
 </table>
-<hr/>
+</div>
 
   {% endfor %}
 
