--- a/cyclope/apps/newsletter/templates/newsletter/content_teasers.html
+++ b/cyclope/apps/newsletter/templates/newsletter/content_teasers.html
@@ -6,38 +6,40 @@
 
   {% for categorization in categorizations %}
     {% alias categorization.content_object as 'article' %}
-
+<div class="newsletter newsletter_teaser">
 <table>
   <tr>
     <td>
       <br/>
-      <span class="pretitle"><a name="editorial">{% trans article.pretitle %}</a></span>
       {% if newsletter.show_ToC %}
-      <span class="show-ToC"><a href="#ToC">{% trans "Return to Table of Contents" %}</a></span>
+      <div class="show-ToC"><a href="#ToC">{% trans "Return to Table of Contents" %}</a></div>
       {% endif %}
-
-      <a name="article__{{ article.slug }}" href="{% url article-detail article.slug %}">
-        <h3 class="title">{% trans article.name  %}</h3>
-      </a>
-
+     
       {% if article.pictures %}
       <a href="{% url article-detail article.slug %}">
-        <img src="{% version article.pictures.0.image.path 'thumbnail' %}" alt="{{ article.pictures.0.name }}" hspace="0" vspace="0" align="right" border="0" />
+        <img class="newsletter_image" src="{% version article.pictures.0.image.path 'thumbnail' %}" alt="{{ article.pictures.0.name }}"/>
       </a>
       {% endif %}
+      
+       <span class="pretitle"><a name="editorial">{% trans article.pretitle %}</a></span>
+      <a name="article__{{ article.slug }}" href="{% url article-detail article.slug %}">
+        <h2 class="title">{% trans article.name  %}</h2>
+      </a>
+
+     
 
       <a href="{% url article-detail article.slug %}">
-        <h4>{{ article|parsed_gettext:"summary"|smart_style }}</h4>
+        <div class="summary">{{ article|parsed_gettext:"summary"|smart_style }}</div>
       </a>
       {% if article.author %}
-      <h5>{% trans "By"%} {{ article.author }}</h5>
+      <h4>{% trans "By"%} {{ article.author }}</h4>
       {% endif %}
 
 
     </td>
   </tr>
 </table>
-<hr/>
+</div>
 
   {% endfor %}
 
